--- a/config.yaml
+++ b/config.yaml
@@ -1,133 +1,207 @@
-# Add your LinkedIn email ID and password.
-# *** WARNING: KEEP THIS CONFIG OFFLINE ON YOUR PC AND DO NOT COMMIT/UPLOAD ***
+# Agrega tu email y contraseña de LinkedIn.
+# *** ADVERTENCIA: MANTÉN ESTA CONFIGURACIÓN OFFLINE EN TU PC Y NO LA SUBAS/CONFIRMES ***
 email: email@domain.com
 password: yourpassword
 
-# Anti-lock default is False to prevent your PC from sleeping to
-# allow bot to run uninterrupted. Set it to True if you wish  to
-# disable this functionality.
+# Anti-bloqueo por defecto es False para prevenir que tu PC entre en suspensión y
+# permitir que el bot funcione sin interrupciones. Ponlo en True si deseas
+# deshabilitar esta funcionalidad.
 disableAntiLock: False
 
-# Set to True if you wish to search for remote jobs only.
+# Pon en True si deseas buscar solo trabajos remotos.
 remote: False
 
-# Set to True if you wish to search for jobs marked as "under 10
-# applicants" (default is False).
+# Pon en True si deseas buscar trabajos marcados como "menos de 10
+# postulantes" (por defecto es False).
 lessthanTenApplicants: False
 
-# Set to True or False to suit your preference. Multiple True allowed.
+# Pon en True o False según tu preferencia. Se permiten múltiples True.
 experienceLevel:
- internship: False
+ internship: True
  entry: True
- associate: True
- mid-senior level: True
+ associate: False
+ mid-senior level: False
  director: False
  executive: False
 
-# Set to True or False to suit your preference. Multiple True allowed.
+# Pon en True o False según tu preferencia. Se permiten múltiples True.
 jobTypes:
  full-time: True
  contract: True
  part-time: False
  temporary: True
- internship: False
+ internship: True
  other: False
  volunteer: False
 
-# Set ONLY one as True to suit your preference.
+# Pon SOLO uno en True según tu preferencia.
 date:
  all time: True
  month: False
  week: False
  24 hours: False
 
-# Remove hash sign to add positions. You can add as many as you need,
-# but preserve formatting
+# Quita el signo # para agregar posiciones. Puedes agregar tantas como necesites,
+# pero conserva el formato
 positions:
- #- First position
- #- A second position
+ - Ingeniero de Datos Junior
+ - Trainee Software Engineer
+ - Junior Developer
+ - Ingeniero Análisis Datos
+ - AI and Automation Engineer
+ - Desarrollador Junior 
+ - Junior Front-End Software Engineer
+ - Junior Cloud Engineer
+ - Ingeniero de software 
+ - Junior Software Engineer
+ - Junior QA Engineer
+ - Junior DevOps Engineer
+ - Junior Data Scientist
+ - Junior Product Manager
+ - Junior Data Analyst
+ - Junior UX/UI Designer
+ - Junior Systems Administrator
+ - Junior Network Engineer
+ - Junior Backend Developer
+ - Junior Frontend Developer
+ - Junior Fullstack Developer
+ - Junior Mobile Developer
+ - Junior Game Developer
+ - Junior Security Analyst
+ - Junior Data Engineer
  #- A third position
+ #- A third position
+ #- A third position
+ #- A third position
+ #- A third position
+ #- A third position
+ #- A third position 
+ #- A third position
+
  #- ...
 
-# Remove hash sign to add locations. You can add as many as you need
-# including adding 'Remote' as a location but first location must be
-# a valid country.
-locations:
- #- First location
- #- A second location
+# Quita el signo # para agregar ubicaciones. Puedes agregar tantas como necesites
+# incluyendo agregar 'Remote' como ubicación pero la primera ubicación debe ser
+# un país válido.
+locations: 
+ - Colombia
+ - United States
+ - Canada
+ - Spain
+ - Germany
+ - France
+ - Italy
+ - Netherlands
+ - Australia
+ - Switzerland
+ #- A third location
+ #- A third location
+ #- A third location
  #- A third location
  #- ...
- #- Remote
+ - Remote
 
-# Set to True if you are residing in the country of job
+# Pon en True si estás residiendo en el país del trabajo
 residentStatus: False
 
-# Distance from the location added above. Allowed values are
-# {0, 5, 10, 25, 50, 100}, use only one.
+# Distancia desde la ubicación agregada arriba. Valores permitidos son
+# {0, 5, 10, 25, 50, 100}, usa solo uno.
 distance: 100
 
-# Optional directory to save logs, does not work sometimes.
-# Does not work sometimes, so leave it unchanged.
+# Directorio opcional para guardar logs, no funciona a veces.
+# No funciona a veces, así que déjalo sin cambios.
 outputFileDirectory: ~/Documents/Applications/EasyApplyBot/EasyApplyBot/
 
-# Companies you don't want to apply.
+# Empresas a las que no quieres postularte.
 companyBlacklist:
- #- company
+ - BairesDev
+ - Truora Inc
+ - Micro Talent
+ - FullStack Labs
+ - EPAM Systems
  #- company2
 
-# Job titles you want to avoid applying. Use it to refine performance of bot.
+# Títulos de trabajo que quieres evitar. Úsalo para refinar el rendimiento del bot.
 titleBlacklist:
- #- word1
+ - Sales Executive
+ - Tecnico de Mantenimiento Industrial
+ - General Practitioner
+ - Coordinador de Procesos
+ - Accountant
+ - Gerente de Recursos Humanos
+ - Civil Engineer
+ - Graphic Designer
+ - Chef de Cocina
+ - Enfermero
+ - Lawyer
+ - Arquitecto
+ - Retail Manager
+ - Soldador
+ - Marketing Specialist
+ - Asesor Financiero
+ - Agente Inmobiliario
+ - Customer Service Manager
+ - Biologist
+ - Asistente Administrativo
+ - Recruiter
+ - Chemical Engineer
+ - Plumber
+ - Geologist
+ #- word2
+ #- word2
+ #- word2
+ #- word2
+ #- word2
  #- word2
 
-# Bot will not apply to jobs posted by black listed people.
+# El bot no se postulará a trabajos publicados por personas en lista negra.
 posterBlacklist:
  #- name1
  #- name2
 
-# Path to your CV/resume and cover letter (remove hash sign). These
-# paths often don't work so apply one job manually once,  bot will
-# reuse manually uploaded CV for automating the task. Note: Prefer
-# a path without spaces, i.e. instead of "Me My" to "MeMy" or "Me_My".
+# Ruta a tu CV/currículum y carta de presentación (quita el signo #). Estas
+# rutas a menudo no funcionan así que postúlate a un trabajo manualmente una vez,
+# el bot reutilizará el CV subido manualmente para automatizar la tarea. Nota: Prefiere
+# una ruta sin espacios, ej. en lugar de "Mi Directorio" usa "MiDirectorio" o "Mi_Directorio".
 uploads:
  resume: C:\Users\myDirectory\Resume.pdf
- # Cover letter is optional
+ # La carta de presentación es opcional
  #coverLetter: C:\Users\myDirectory\CoverLettter.pdf
 
 
-# ------------ QA section -------------------
+# ------------ Sección QA -------------------
 
-# ------------ Additional parameters: checkboxes ---------------
+# ------------ Parámetros adicionales: casillas de verificación ---------------
 checkboxes:
- # Do you have a valid driver's license? (yes/no checkbox)
- driversLicence: True
- # Will you now, or in the future, require sponsorship for
- # employment visa status (e.g. H-1B visa status)? (yes/no checkbox)
- # This is relative to the location and your citizenship applying
- # above, and same with legallyAuthorized.
- requireVisa: False
- # Are you legally authorized to work in COUNTRY? (yes/no checkbox)
- legallyAuthorized: False
- # Do you have necessary licenses or certifications required in your
- # profession? E.g. CPA, CA, CFA, professional license
+ # ¿Tienes una licencia de conducir válida? (casilla sí/no)
+ driversLicence: False
+ # ¿Necesitarás ahora o en el futuro patrocinio para
+ # estatus de visa de empleo (ej. estatus de visa H-1B)? (casilla sí/no)
+ # Esto es relativo a la ubicación y tu ciudadanía postulándote
+ # arriba, y lo mismo con legallyAuthorized.
+ requireVisa: True
+ # ¿Estás legalmente autorizado para trabajar en PAÍS? (casilla sí/no)
+ legallyAuthorized: True
+ # ¿Tienes las licencias o certificaciones necesarias requeridas en tu
+ # profesión? Ej. CPA, CA, CFA, licencia profesional
  certifiedProfessional: True
- # We must fill this position urgently. Can you start immediately?
- # (yes/no checkbox)
+ # Debemos llenar esta posición urgentemente. ¿Puedes empezar inmediatamente?
+ # (casilla sí/no)
  urgentFill: True
- # Are you comfortable commuting or work on-site to this job's location?
- # (yes/no checkbox)
+ # ¿Te sientes cómodo viajando diariamente o trabajando en el sitio de este trabajo?
+ # (casilla sí/no)
  commute: True
- # Are you comfortable working in a remote environment? (yes/no checkbox)
+ # ¿Te sientes cómodo trabajando en un ambiente remoto? (casilla sí/no)
  remote: True
- # Are you comfortable taking a drug in accordance with local/state laws?
- # (yes/no checkbox)
+ # ¿Te sientes cómodo tomando una prueba de drogas de acuerdo con las leyes locales/estatales?
+ # (casilla sí/no)
  drugTest: True
- # Are you willing to complete an assessment? (yes/no checkbox)
+ # ¿Estás dispuesto a completar una evaluación? (casilla sí/no)
  assessment: True
- # Do you have security clearance of [xxx] country? (yes/no checkbox)
+ # ¿Tienes autorización de seguridad del país [xxx]? (casilla sí/no)
  securityClearance: False
- # Have you completed the following level of education: DEGREE TYPE? Remove
- # applicable # signs (yes/no checkbox)
+ # ¿Has completado el siguiente nivel de educación: TIPO DE GRADO? Quita los
+ # signos # aplicables (casilla sí/no)
  degreeCompleted:
    - High School Diploma
    - Bachelor's Degree
@@ -137,33 +211,34 @@ checkboxes:
   # - Doctor of Philosophy
   # - Doctor of Medicine
   # - Doctor of Law
- # Are you willing to undergo a background check, in accordance with local
- # law/regulations?
+ # ¿Estás dispuesto a someterte a una verificación de antecedentes, de acuerdo con las
+ # leyes/regulaciones locales?
  backgroundCheck: True
 
-# ------------ Additional parameters: universityGpa ---------------
+# ------------ Parámetros adicionales: universityGpa ---------------
 universityGpa: 4.0
 
-# ------------ Additional parameters: salaryMinimum ---------------
-salaryMinimum: 65000
+# ------------ Parámetros adicionales: salaryMinimum ---------------
+salaryMinimum: 1200
 
-# ------------ Additional parameters: languages ---------------
+# ------------ Parámetros adicionales: idiomas ---------------
 languages:
- english: Native or bilingual # Allowed choices { None, Conversational, Professional, Native or bilingual }
+ english: Professional # Opciones permitidas { None, Conversational, Professional, Native or bilingual }
+ spanish: Native or bilingual
  # arabic: Conversational
  # french: Professional
 
-# ------------ Additional parameters: noticePeriod in weeks ---------------
+# ------------ Parámetros adicionales: noticePeriod en semanas ---------------
 noticePeriod: 2
 
-# ------------ Additional parameters: years of experience ---------------
-# How many years of work experience do you have ...? (whole numbers only).
-# You may add more skills depending on your industry or profession at the bottom.
-# Use `unprepared questions.csv` to add more depending on your use case.
-# A few samples are added below, you may not need all of these. 'default'
-# value will be used as a fall-back input to additional questions.
+# ------------ Parámetros adicionales: años de experiencia ---------------
+# ¿Cuántos años de experiencia laboral tienes...? (solo números enteros).
+# Puedes agregar más habilidades dependiendo de tu industria o profesión al final.
+# Usa `unprepared questions.csv` para agregar más dependiendo de tu caso de uso.
+# Algunas muestras se agregan abajo, puede que no necesites todas estas. El valor 'default'
+# será usado como entrada de respaldo para preguntas adicionales.
 experience:
- # normal ones
+ # normales
  Accounting/Auditing: 0
  Administrative : 0
  Advertising : 0
@@ -174,7 +249,7 @@ experience:
  Customer Service: 0
  Distribution Design: 0
  Education: 0
- Engineering: 0
+ Engineering: 1
  Finance: 0
  General Business: 0
  Health Care Provider: 0
@@ -198,12 +273,12 @@ experience:
  Training: 0
  Writing/Editing: 0
  VBA: 0
- PowerBI: 0
+ PowerBI: 1
  PowerQuery: 0
- Excel: 0
- PowerPoint: 0
- Word: 0
- SQL Server: 0
+ Excel: 1
+ PowerPoint: 1
+ Word: 1
+ SQL Server: 1
  Communication: 0
  Financial markets: 0
  Business: 0
@@ -212,7 +287,7 @@ experience:
  Cash flow: 0
  Hedging: 0
  Treasury services: 0
- Microsoft Power BI: 0
+ Microsoft Power BI: 1
  Accounting: 0
  Auditing: 0
  Financial modeling: 0
@@ -220,27 +295,57 @@ experience:
  FP&A: 0
  PQE: 0
  Training & Development: 0
- #python: 0
+ python: 1
+ SQL: 1
+ Cloud: 1
+ ETL: 1
+ HTML: 1
+ CSS: 1
+ JavaScript: 1
+ React: 1
+ Astro: 1
+ Angular: 1
+ Vue.js: 1
+ Node.js: 1
+ APIs RESTful: 1
+ Django: 1
+ Flask: 1
+ PostgreSQL: 1
+ MySQL: 1
+ MongoDB: 1
+ AWS: 1
+ Azure: 1
+ GCP: 1
+ Docker: 1
+ Jenkins: 1
+ GitHub Actions: 1
+ Terraform: 1
+ Postman: 1
+ Flutter: 1
+ TensorFlow: 1
+ PyTorch: 1
+
+
  #selenium: 0
- # default to put for any industry/skill that you did not list
+ # por defecto para poner en cualquier industria/habilidad que no listaste
  default: 0
 
-# ------------ Additional parameters: personal info ---------------
+# ------------ Parámetros adicionales: información personal ---------------
 personalInfo:
  Pronouns: Mr.
  First Name: FirstName
  Last Name: LastName
- Phone Country Code: Canada (+1) # See Linkedin for your country code, must be exact according to the international platform, i.e. Italy (+39) not Italia (+39)
+ Phone Country Code: Canada (+1) # Ve LinkedIn para el código de tu país, debe ser exacto según la plataforma internacional, ej. Italy (+39) no Italia (+39)
  Mobile Phone Number: 1234567890
  Street address: 123 Fake Street
- City: Red Deer, Alberta # Include the state/province as well!
+ City: Red Deer, Alberta # ¡Incluye también el estado/provincia!
  State: YourState
  Zip: YourZip/Postal
  Linkedin: https://www.linkedin.com/in/my-linkedin-profile
- Website: https://www.my-website.com # github/website is interchangeable here
- MessageToManager: "Hi, I am interested to join your organization. Please have a look at my resume. Thank you." # Keep message short and within the quotes. This is a testing feature and may not work.
+ Website: https://www.my-website.com # github/website son intercambiables aquí
+ MessageToManager: "Hi, I am interested to join your organization. Please have a look at my resume. Thank you." # Mantén el mensaje corto y entre comillas. Esta es una función de prueba y puede no funcionar.
 
-# ------------ Additional parameters: USA employment crap ---------------
+# ------------ Parámetros adicionales: porquerías de empleo de USA ---------------
 eeo:
  gender: None
  race: None
