Add mobile application development skills and improve unprepared questions logging

--- a/config.yaml
+++ b/config.yaml
@@ -324,6 +324,10 @@ experience:
  Flutter: 1
  TensorFlow: 1
  PyTorch: 1
+ Desarrollo de aplicaciones móviles: 1
+ Mobile Application Development: 1
+
+
 
 
  #selenium: 0
