Add AWS-related experience handling and improve response logic for late work scenarios

--- a/config.yaml
+++ b/config.yaml
@@ -326,6 +326,9 @@ experience:
  PyTorch: 1
  Desarrollo de aplicaciones móviles: 1
  Mobile Application Development: 1
+ Production Deployments: 1
+ AWS Debugging: 8  # Escala del 1-10, ajusta según tu nivel real
+ AWS Production Issues: 8
 
 
 
