Enhance experience evaluation in additional_questions method; add handling for AWS, microservices, and .NET APIs.

--- a/config.yaml
+++ b/config.yaml
@@ -343,6 +343,13 @@ experience:
  distribución: 1  # Ajusta este valor según tu experiencia real (0-99)
  distributoría: 1
  distribution: 1
+ amazon web services: 1
+ microservicios: 1
+ microservices: 1
+ .net: 1
+ .net apis: 1
+ net apis: 1
+ apis: 1
 
 
 
